Add route to mint new tokens for a user
TODO: should probably add scopes to tokens
