# lib/yourbot_web/router.ex
@@ -25,6 +25,7 @@ defmodule YourBotWeb.Router do
   scope "/api", YourBotWeb do
     pipe_through [:api, :require_authenticated_api_token]
     resources "/users", UsersController, only: [:create, :show, :update, :delete]
+    post "/users/:id/token", UsersController, :token
     resources "/bots", BotsController, only: [:index, :create, :show, :update, :delete]
   end
 
